testing/stage_17/invalid/int_struct_def.c
int
{
	char c;
	int i;
} a;

int main()
{
	a.c=2;
	a.i=5;
	return a.c*a.i;
}